# mnn-speech2text

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  format.sh  mnn-convert.sh
cmake/: gflags.cmake  glog.cmake  googletest.cmake  mnn.cmake
configs/: decoding_config.json  model_config.json  rnnt_rsrc_config.json  session_config.json
mnn-s2t/: CMakeLists.txt
mnn-s2t/common/: common.h
mnn-s2t/decoding/: CMakeLists.txt  decoding.h  rnnt-beam-decoding-test.cc  rnnt-beam-decoding.cc  rnnt-beam-decoding.h  rnnt-greedy-decoding-test.cc  rnnt-greedy-decoding.cc  rnnt-greedy-decoding.h  tokenizer-test.cc  tokenizer.cc  tokenizer.h
mnn-s2t/frontend/: CMakeLists.txt  const-setting.h  feature-function.cc  feature-function.h  feature-window.cc  feature-window.h  fftsg.cc  frontend-pipeline-test.cc  frontend-pipeline.cc  frontend-pipeline.h  kaldi-fbank-feature-test.cc  kaldi-fbank-feature.cc  kaldi-fbank-feature.h  kaldi-math.cc  kaldi-math.h  mel-computations.cc  mel-computations.h  rfft.cc  rfft.h  wav.h
mnn-s2t/models/: CMakeLists.txt  encoder.h  joiner-test.cc  joiner.cc  joiner.h  model-session.cc  model-session.h  predictor-test.cc  predictor.cc  predictor.h  zipformer-test.cc  zipformer.cc  zipformer.h
mnn-s2t/session/: CMakeLists.txt  rnnt-rsrc.h  rnnt-streaming-session-test.cc  rnnt-streaming-session.cc  rnnt-streaming-session.h
mnn-s2t/utils/: json.h  thread-pool.h
mnn-s2trt/: CMakeLists.txt
mnn-s2trt/common/: common.h
mnn-s2trt/decoding/: CMakeLists.txt  decoding.h  rnnt-greedy-decoding-test.cc  rnnt-greedy-decoding.cc  rnnt-greedy-decoding.h  tokenizer-test.cc  tokenizer.cc  tokenizer.h
mnn-s2trt/frontend/: feature-function.h  frontend-pipeline-test.cc  frontend-pipeline.cc  frontend-pipeline.h  kaldi-fbank-feature-test.cc  kaldi-fbank-feature.cc  kaldi-math.cc  kaldi-math.h  mel-computations.cc  mel-computations.h  rfft.h  wav.h
mnn-s2trt/model/: predictor-test.cc  predictor.cc  predictor.h
mnn-s2trt/models/: CMakeLists.txt  joiner-test.cc  joiner.cc  joiner.h  predictor-test.cc  predictor.cc  predictor.h
sample_data/: test_data.json  units.txt
sample_data/models/: joiner-int8.mnn  joiner_streaming_step.mnn  predictor-int8.mnn  predictor_streaming_step.mnn
